--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "motion": "^12.23.6",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.261.7",
+    "posthog-node": "^5.8.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
